# fluidsandbox

./: .gitignore  CLAUDE.md  FluidSandbox.sln  README.md
FluidSandbox/: Actor.cpp  Actor.h  Actor.hpp  AllActors.hpp  AllFBOs.cpp  AllFBOs.h  AllFBOs.hpp  AllShaders.cpp  AllShaders.h  AllShaders.hpp  AllVBOs.hpp  CMakeLists.txt  Camera.hpp  CubeActor.cpp  CubeActor.h  CubeActor.hpp  FBO.cpp  FBO.h  FluidContainer.hpp  FluidDescription.h  FluidProperties.h  FluidSandbox.cpp  FluidSandbox.vcproj  FluidSandbox.vcxproj  FluidSandbox.vcxproj.filters  FluidScenario.cpp  FluidScenario.h  FluidSimulationProperties.h  FluidSystem.cpp  FluidSystem.h  FontAtlas.cpp  FontAtlas.h  Fonts.h  Frustum.cpp  Frustum.h  GLSL.cpp  GLSL.h  GLSLManager.cpp  GLSLManager.h  GeometryVBO.cpp  (+55 more)
FluidSandbox/scenarios/: Scenario00.xml  Scenario01.xml  Scenario02.xml  Scenario03.xml  Scenario04.xml  Scenario05.xml  Scenario06.xml  Scenario07.xml  Scenario08.xml  Scenario09.xml  Scenario10.xml
FluidSandbox/shaders/: ClearWater.fragment  ClearWater.vertex  ColorWater.fragment  Colored.fragment  Colored.vertex  Debug.fragment  DeferredRendering.fragment  DeferredRendering.vertex  Depth.fragment  Depth.vertex  DepthBlur.fragment  DepthBlur.vertex  DirectionalLight.fragment  DirectionalLight.vertex  FontTexture.fragment  FontTexture.vertex  GBuffer.fragment  GBuffer.vertex  Lighting.fragment  Lighting.vertex  Ortho.fragment  Ortho.vertex  PointLight.fragment  PointLight.vertex  PointSprites.fragment  PointSprites.vertex  Skybox.fragment  Skybox.vertex  Thickness.fragment  VisualizeDepth.fragment
Libraries/PhysX/: version_3.4.txt
Libraries/PhysX/physx/lib/win32/: PhysX3CommonDEBUG_x86.lib  PhysX3Common_x86.lib  PhysX3CookingDEBUG_x86.lib  PhysX3Cooking_x86.lib  PhysX3DEBUG_x86.lib  PhysX3_x86.lib  x86 physx lib files here.txt
Libraries/PhysX/physx/lib/windows-x64-debug/: PhysX3DEBUG_x64.lib
Libraries/PhysX/physx/lib/windows-x64-release/: PhysX3Common_x64.lib  PhysX3_x64.lib
Libraries/PhysX/physx/lib/x64/: PhysX3CommonDEBUG_x64.lib  PhysX3CookingDEBUG_x64.lib  PhysX3Cooking_x64.lib  x64 physx lib files here.txt
Libraries/PhysX/pxshared/lib/win32/: PxFoundationDEBUG_x86.lib  PxFoundation_x86.lib  PxPvdSDKDEBUG_x86.lib  PxPvdSDK_x86.lib  PxTaskDEBUG_x86.lib  PxTask_x86.lib
Libraries/PhysX/pxshared/lib/windows-x64-debug/: PxTaskDEBUG_x64.lib
Libraries/PhysX/pxshared/lib/windows-x64-release/: PxFoundation_x64.lib  PxTask_x64.lib
Libraries/PhysX/pxshared/lib/x64/: PxFoundationDEBUG_x64.lib  PxPvdSDKDEBUG_x64.lib  PxPvdSDK_x64.lib
Libraries/final/include/: final_dynamic_opengl.h  final_platform_layer.h  final_xml.h
Libraries/glad/include/glad/: glad.h
Libraries/glad/src/: glad.c
